feat: add text in all sections in main container

--- a/index.html
+++ b/index.html
@@ -16,17 +16,82 @@
                   <li class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></li>
                   <li class="nav-item"><a href="#summary" class="nav-link">Summary</a></li>
                   <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
-                  <li class="nav-item"><a href="#code" class="nav-link">Summary</a></li>
-                  <li class="nav-item"><a href="#courses" class="nav-link">Summary</a></li>
-                  <li class="nav-item"><a href="#projects" class="nav-link">Summary</a></li>
-                  <li class="nav-item"><a href="#education" class="nav-link">Summary</a></li>
-                  <li class="nav-item"><a href="#languages" class="nav-link">Summary</a></li>
+                  <li class="nav-item"><a href="#code" class="nav-link">Code</a></li>
+                  <li class="nav-item"><a href="#courses" class="nav-link">Courses</a></li>
+                  <li class="nav-item"><a href="#projects" class="nav-link">Projects</a></li>
+                  <li class="nav-item"><a href="#education" class="nav-link">Education</a></li>
+                  <li class="nav-item"><a href="#languages" class="nav-link">Languages</a></li>
                 </ul>
               </nav>
         </div>
     </header>
-    <main class="main">
-        <div class="container"></div>
+    <main class="main main-container">
+        <div class="container">
+            <section class="section" id="profile">
+                <h1 class="section-title">Anastasiya Voronova</h1>
+                <p>Junior Frontend Developer</p>
+                <img src="assets/img/photo.JPG" alt="my photo" width="250" height="300">
+            </section>
+            <section class="section" id="contacts">
+                <h2 class="section-title">Contacts</h2>
+                <p>Phone: +375 29 2174433</p>
+                <p>E-mail: buchneva.anastasya92@gmail.com</p>
+                <p>Telegram: @nastabu</p>
+                <a href="http://linkedin.com/in/настя-бучнева-335b94242">LinkedIn</a>
+            </section>
+            <section class="section" id="summary">
+                <h2 class="section-title">Summary</h2>
+                <p>Self-organized with a high sense of responsibility customs declarant with 6 years of experience and multitasking meticulous head of logistics with about 1 year of experience.</p>
+                <ul>
+                    <li>As a customs declarant I used to do all possible work related to the customs clearance , including certification, contracts, logistics, warehousing, legislation.</li>
+                    <li>As a head of logistics I was in charge of arranging successfully functioning Free Customs Zone and warehouse operations for the electric bus assembly.</li>
+                </ul>
+            </section>
+            <section class="section" id="skills">
+                <h2 class="section-title">Skills</h2>
+                <ul>
+                    <li>OOP Basics</li>
+                    <li>C# Basics</li>
+                    <li>Git,GitHub</li>
+                    <li>VS</li>
+                    <li>Unity 2D Basics</li>
+                </ul>
+            </section>
+            <section class="section" id="code">
+                <h2 class="section-title">Code</h2>
+                <pre>
+                    <code>
+                        public class CustomMath {
+                            public static int multiply(int a, int b) {
+                                return a * b;
+                            }
+                        }
+                    </code>
+                </pre>
+            </section>
+            <section class="section" id="courses">
+                <h2 class="section-title">Courses</h2>
+                <ul>
+                    <li>RS Schools Course «JavaScript/Front-end. Stage 0» (in progress)</li>
+                    <li>JavaScript Manual on learnjavascript.ru (in progress)</li>
+                    <li>.NET Development EPAM (self-study)(in progress)</li>
+                    <li>Specialization C# Programming for Unity Game Development (in progress, 3 of 4 courses completed)</li>
+                </ul>
+            </section>
+            <section class="section" id="projects">
+                <h2 class="section-title">Projects</h2>
+                <a href="https://voronovanasta.github.io/rsschool-cv/">CV</a>
+            </section>
+            <section class="section" id="education">
+                <h2 class="section-title">Education</h2>
+                <p>Belarussian State University, Faculty of International Relations </p>
+            </section>
+            <section class="section" id="languages">
+                <h2 class="section-title">Languages</h2>
+                <p>English - B2</p>
+                <p>German - B2</p>
+            </section>
+        </div>
     </main>
     <footer class="footer">
         <div class="container"></div>
