feat: format style in header and main block

--- a/index.html
+++ b/index.html
@@ -25,19 +25,21 @@
               </nav>
         </div>
     </header>
-    <main class="main main-container">
-        <div class="container">
+    <main class="main ">
+        <div class="container main-container">
             <section class="section" id="profile">
-                <h1 class="section-title">Anastasiya Voronova</h1>
-                <p>Junior Frontend Developer</p>
-                <img src="assets/img/photo.JPG" alt="my photo" width="250" height="300">
+                <img class="photo" src="assets/img/photo.JPG" width="200" height=auto alt="my photo">
+                <h1 class="section-title my-photo">Anastasiya Voronova</h1>
+                <p class="profession">Junior Front-end Developer</p>
+                
+                
             </section>
             <section class="section" id="contacts">
                 <h2 class="section-title">Contacts</h2>
                 <p>Phone: +375 29 2174433</p>
                 <p>E-mail: buchneva.anastasya92@gmail.com</p>
                 <p>Telegram: @nastabu</p>
-                <a href="http://linkedin.com/in/настя-бучнева-335b94242">LinkedIn</a>
+                <a class="link" href="http://linkedin.com/in/настя-бучнева-335b94242">LinkedIn</a>
             </section>
             <section class="section" id="summary">
                 <h2 class="section-title">Summary</h2>
@@ -59,14 +61,14 @@
             </section>
             <section class="section" id="code">
                 <h2 class="section-title">Code</h2>
-                <pre>
-                    <code>
-                        public class CustomMath {
-                            public static int multiply(int a, int b) {
-                                return a * b;
-                            }
+                <pre class="code">
+                 <code>
+                    public class CustomMath {
+                        public static int multiply(int a, int b) {
+                            return a * b;
                         }
-                    </code>
+                    }
+                 </code>
                 </pre>
             </section>
             <section class="section" id="courses">
@@ -80,7 +82,7 @@
             </section>
             <section class="section" id="projects">
                 <h2 class="section-title">Projects</h2>
-                <a href="https://voronovanasta.github.io/rsschool-cv/">CV</a>
+                <a class="link" href="https://voronovanasta.github.io/rsschool-cv/">CV</a>
             </section>
             <section class="section" id="education">
                 <h2 class="section-title">Education</h2>
