--- a/index.html
+++ b/index.html
@@ -95,7 +95,9 @@
     </main>
     <footer class="footer">
         <div class="container">
-            <img class="logo" src="assets/img/rs_school_js.svg" alt="logo" width="100" height="auto">
+            <a class="logo" href="https://rs.school/js-stage0/" target="_blank">
+                <img src="assets/img/rs_school_js.svg" alt="logo" width="100" height="auto">
+            </a>
             <span>2022</span>
             <span><a href="https://github.com/voronovanasta">nastavoronova</a></span>    
         </div>
