feat: correct code in html and css files

--- a/index.html
+++ b/index.html
@@ -13,14 +13,30 @@
         <div class="container">
             <nav class="nav">
                 <ul class="nav-list">
-                  <li class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></li>
-                  <li class="nav-item"><a href="#summary" class="nav-link">Summary</a></li>
-                  <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
-                  <li class="nav-item"><a href="#code" class="nav-link">Code</a></li>
-                  <li class="nav-item"><a href="#courses" class="nav-link">Courses</a></li>
-                  <li class="nav-item"><a href="#projects" class="nav-link">Projects</a></li>
-                  <li class="nav-item"><a href="#education" class="nav-link">Education</a></li>
-                  <li class="nav-item"><a href="#languages" class="nav-link">Languages</a></li>
+                  <li class="nav-item">
+                    <a href="#contacts" class="nav-link">Contacts</a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="#summary" class="nav-link">Summary</a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="#skills" class="nav-link">Skills</a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="#code" class="nav-link">Code</a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="#courses" class="nav-link">Courses</a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="#projects" class="nav-link">Projects</a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="#education" class="nav-link">Education</a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="#languages" class="nav-link">Languages</a>
+                  </li>
                 </ul>
               </nav>
         </div>
@@ -28,9 +44,9 @@
     <main class="main ">
         <div class="container main-container">
             <section class="section" id="profile">
-                <img class="photo" src="assets/img/photo.JPG" width="200" height=auto alt="my photo">
-                <h1 class="section-title my-photo">Anastasiya Voronova</h1>
-                <p class="profession">Junior Front-end Developer</p>   
+                <img class="photo" src="assets/img/photo.JPG" alt="my photo">
+                <h1 class="section-title my-name">Anastasiya Voronova</h1>
+                <p class="profession">Junior Front-End Developer</p>   
             </section>
             <section class="section" id="contacts">
                 <h2 class="section-title">Contacts</h2>
@@ -96,7 +112,7 @@
     <footer class="footer">
         <div class="container">
             <a class="logo" href="https://rs.school/js-stage0/" target="_blank">
-                <img src="assets/img/rs_school_js.svg" alt="logo" width="100" height="auto">
+                <img class="logo-image" src="assets/img/rs_school_js.svg" alt="logo">
             </a>
             <span>2022</span>
             <span><a href="https://github.com/voronovanasta">nastavoronova</a></span>    
